--- a/common/head_tag.html
+++ b/common/head_tag.html
@@ -1,8 +1,12 @@
 <script type="text/discourse-plugin" version="0.8">
   const site_id = settings.clicky_site_id;
   if (site_id) {
-    var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(site_id);
+    window.clicky_site_ids = window.clicky_site_ids || [];
+    window.clicky_site_ids.push(site_id);
+    var script = document.createElement('script');
+    script.src = "//static.getclicky.com/js";
+    document.head.appendChild(script);
   } else {
-    console.error("click_site_id not set - Clicky support disabled");
+    console.error("clicky_site_id not set - Clicky support disabled");
   }
 </script>
